--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"dist"
 	],
 	"scripts": {
-		"test": "vitest",
+		"test": "vitest run",
 		"build": "vite build",
 		"deploy": "npm publish",
 		"typecheck": "tsc --noEmit",
