--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/siddiquipro/xtack.git"
+		"url": "git+https://github.com/siddiquipro/xtack.git"
 	},
 	"keywords": [
 		"xtack",
